# High-dimensional-tabular-data

./: .gitignore  .gitmodules  README.md  data_analysis.ipynb  env.yaml  plot.ipynb  plot.py  preprocess_sklearn.py  pyproject.toml  run_all.sh  run_average.sh  run_baselines.sh  run_baselines_bw.sh  run_baselines_meta.sh  sklearn_baselines.py  train_sklearn.py  used_seeds.txt  utils.py
LOGS/: average_rmse.%N.184660.out  average_rmse.uc3n070.184660.out  baselines.%N.184659.0.out  baselines.%N.184659.1.out  baselines.uc3n082.184659.0.err  baselines.uc3n082.184659.0.out  baselines.uc3n082.184659.1.out  baselines.uc3n082.184659.2.out  toy_examples.%N.182831.0.out  toy_examples.%N.182831.1.out  toy_examples.uc3n082.182831.0.out  toy_examples.uc3n082.182831.2.err
experiments/: generate_slurm_script.py  generate_slurm_scripts.sh  plot_bar_results.py  plot_distributions.ipynb  plot_results.py  plot_scale_study.py  plot_val.py  scalability_study_iterate.sh  summarize_elapsed_time.py
results/: averaged_rmse.txt  results_seed_1.txt  results_seed_100.txt  results_seed_1880.txt  results_seed_241.txt  results_seed_44.txt  results_seed_529.txt  results_seed_5456.txt  results_seed_75.txt  results_seed_98732.txt  results_seed_996.txt
results_old/: averaged_rmse.txt  results_seed_1880.txt  results_seed_44.txt  results_seed_529.txt
src/: __init__.py  get_training_time.py  plot.py  preprocess.py  preprocess_sklearn.py  train.py  train_sklearn.py  utils.py
src/high_tab/: __init__.py  preprocess.py  train.py
src/high_tab/models/: __init__.py  tabarena_model.py  tabarena_msp_model.py  tabpfnv2_original.py
src/matusd_toy_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py  base.py  tabarena_model.py  tabarena_msp_model.py  tabpfnv2_original.py
src/preprocessors/: __init__.py  sand_layer.py  tab_preprocessor.py
src/utils/: __init__.py  data_analysis.ipynb  data_preparation.py  dataset_analysis.ipynb  hardware.py  io.py  loggers.py  misc.py  openml_data.py  plotting.py
(+11 files in other folders)
