[project]
name = "matusd-toy-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogluon>=1.4.0",
    "configspace>=1.2.1",
    "openml>=0.15.1",
    "pytabkit>=1.6.1",
    "tabpfn>=2.1.3",
    "torch>=2.7.1",
]
