[project]
name = "matusd-toy-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogluon>=1.4.0",
    "configspace>=1.2.1",
    "ipykernel>=6.30.1",
    "numpy>=2.1.3",
    "openml>=0.15.1",
    "pip>=25.2",
    "pytabkit>=1.6.1",
    "seaborn>=0.13.2",
    "tabpfn>=2.2.1",
    "tensorflow>=2.20.0",
    "torch>=2.7.1",
]
