[project]
name = "high_tab"
version = "0.1.0"
description = "Benchmarking FS/DR methods for tabular data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp-cors>=0.8.1",
    "autogluon>=1.4.0",
    "catboost>=1.2.8",
    "colorful>=0.5.7",
    "configspace>=1.2.1",
    "einx>=0.3.0",
    "fastai>=2.8.4",
    "hyperopt>=0.2.7",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "numpy>=2.1.3",
    "opencensus>=0.11.4",
    "opencensus-context>=0.1.3",
    "openml>=0.15.1",
    "pip>=25.2",
    "pysocks>=1.7.1",
    "pytabkit>=1.6.1",
    "ray>=2.44.1",
    "rotary-embedding-torch>=0.8.9",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "stevedore>=5.4.1",
    "tabicl>=0.1.3",
    "tabpfn==2.2.1",
    "tabpfnwide",
    "tensorboardx>=2.6.4",
    "tensorflow>=2.20.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [
    "external/tabpfnwide",
]

[tool.uv.sources]
tabpfnwide = { workspace = true, editable = true }
